# fastf1_analytics

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yaml  mkdocs.yml  pyproject.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yaml  ci.yml  docs.yml
docs/: gallery.md  how-it-works.md  index.md
docs/api/: plotting.md  session_loader.md
docs/api/gallery/: index.md
docs/assets/data/drs/: index.json  italian_grand_prix_2025_drs_effect_VER.json
docs/assets/gallery/: 2024_drivers_championship_points.yaml  2024_drivers_time_in_first.yaml  italian_grand_prix_2025_drs_effect_VER.yaml  italian_grand_prix_2025_drs_effect_VER.yml  italian_grand_prix_2025_tyre_performance.yaml  italian_grand_prix_2025_tyre_strategy.yaml  italian_grand_prix_2025_tyre_strategy.yml
docs/javascripts/: gallery_bootstrap.js
docs/javascripts/gallery/: drs_effectiveness.js
docs/reference/: fastf1_analytics.md  fastf1_portfolio.md
examples/scripts/: monaco_qual_summary.py  pace_evolution.py  positions_gained.py  race_tyre_strategy.py  telemetry_compare.py
src/fastf1_analytics/: plotting.py  utils.py
src/fastf1_analytics/charts/: __init__.py  driver_points.py  drs_effectiveness.py  time_in_first.py  tyre_performance.py  tyre_strategy.py
src/fastf1_portfolio/: __init__.py  cli.py  plotting.py  session_loader.py  utils.py
src/fastf1_portfolio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fastf1_portfolio/charts/: __init__.py  driver_points.py  drs_effectiveness.py  time_in_first.py  tyre_strategy.py
tests/: test_imports.py
tools/: generate_gallery.py
tools/export_json/: drs_effectiveness.py
tools/plots/: driver_championship.py  drs_effectiveness.py  time_in_first.py  tyre_performance.py  tyre_strategy.py
