[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastf1-analytics"
version = "0.1.0"
description = "Reusable FastF1 helpers and a gallery of analyses"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "kody-sherritze"}]
dependencies = [
  "fastf1>=3.2.1",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "tqdm>=4.65",
  "PyYAML>=6.0.2",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
  "mkdocs-glightbox>=0.3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5.6",
  "mypy>=1.11",
  "black>=24.3.0",
  "pre-commit>=3.6.0",
  "nbstripout>=0.7.1",
  "pymdown-extensions>=10.8",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["fastf1", "fastf1.*"]
ignore_missing_imports = true

[project.scripts]
f1-analytics-monaco = "fastf1_analytics.cli:monaco_main"